--- a/assets/test.css
+++ b/assets/test.css
@@ -1,11 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto&display=swap');
-
-label{
-  text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 500;
+:root{
+  --leftbox:75%;
+  --rightbox:25%;
 }
-div{
-  border: 1px solid black;
+*{
+  margin: 0;
+  padding: 0;
+}
+body{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+}
+.boxes{
   height: 100%;
+  position:absolute;
+}
+.centered{
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+}
+.qNo{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  margin: 0 3rem;
+  margin-top: 2rem;
+  border-bottom: 1.2px solid #dfdfdf;
+  padding-bottom: 10px;
+}
+.question{
+  font-weight: 400;
+  margin: 2rem 3rem; 
+  font-size: smaller;
+}
+.answers{
+  font-size: smaller;
+  font-weight: 400;
+  margin: 2rem 3rem; 
+  line-height: 2rem;
+}
+[id=online_test]{
+  width:var(--leftbox);
+}
+[id=questions]{
+  right: 0;
+  width: var(--rightbox);
+  box-shadow: inset 48px -3px 19px -48px rgba(0,0,0,0.15);
+}
+[id=tab1]{
+  background-color: rgb(232, 232,232);
+}
+[id=tab2]{
+  background-color: rgb(228, 228,228);
+  box-shadow: inset 48px -3px 19px -48px rgba(0,0,0,0.15);
 }
