--- a/assets/rules.css
+++ b/assets/rules.css
@@ -5,12 +5,14 @@
   justify-content: center;
 }
 .box{
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 80%;
   height: 35rem;
   border-radius: .8rem;
   background-color: white;
-  margin-top: 5.7rem;
-  transform: scale(.95);
+  transform: scale(.95) translate(-50%,-50%);
   box-shadow:0 10px 30px 0 rgb(78, 78, 78,0.5);
 }
 
